[gd_scene load_steps=2 format=3 uid="uid://dwbd08bjhtsji"]

[ext_resource type="Script" path="res://scenes/timing_mini_game.gd" id="1_flxws"]

[node name="TimingMiniGame" type="Node2D"]
script = ExtResource("1_flxws")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 10)
offset_left = -50.0
offset_top = -5.0
offset_right = 50.0
offset_bottom = 5.0
color = Color(0.941176, 0.611765, 0.337255, 1)

[node name="SuccessZone" type="ColorRect" parent="."]
offset_left = -19.0
offset_top = -4.0
offset_right = 19.0
offset_bottom = 3.0

[node name="MovingBar" type="ColorRect" parent="."]
custom_minimum_size = Vector2(4, 18)
offset_left = -2.0
offset_top = -9.0
offset_right = 2.0
offset_bottom = 9.0
color = Color(0.90397, 0.497605, 0.157056, 1)

[node name="StopButton" type="Button" parent="."]
offset_left = -7.0
offset_top = 12.0
offset_right = 6.0
offset_bottom = 20.0
